[gd_scene load_steps=4 format=2]

[ext_resource path="res://goat/helper_scenes/Inventory.gd" type="Script" id=1]
[ext_resource path="res://goat/helper_scenes/RayCast3D.tscn" type="PackedScene" id=2]
[ext_resource path="res://goat/helper_scenes/InventoryItems.tscn" type="PackedScene" id=3]

[node name="Inventory" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1

[node name="ViewportContainer" type="ViewportContainer" parent="CenterContainer"]
editor/display_folded = true
margin_left = 212.0
margin_right = 812.0
margin_bottom = 600.0
rect_min_size = Vector2( 600, 600 )

[node name="Viewport" type="Viewport" parent="CenterContainer/ViewportContainer"]
size = Vector2( 600, 600 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="Inventory3D" type="Spatial" parent="CenterContainer/ViewportContainer/Viewport"]

[node name="Camera" type="Camera" parent="CenterContainer/ViewportContainer/Viewport/Inventory3D"]
editor/display_folded = true
current = true
far = 5.0

[node name="RayCast3D" parent="CenterContainer/ViewportContainer/Viewport/Inventory3D/Camera" instance=ExtResource( 2 )]

[node name="OmniLight" type="OmniLight" parent="CenterContainer/ViewportContainer/Viewport/Inventory3D"]

[node name="Rotator" type="Spatial" parent="CenterContainer/ViewportContainer/Viewport/Inventory3D"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2 )

[node name="InventoryItems" parent="." instance=ExtResource( 3 )]
mouse_filter = 2
[connection signal="gui_input" from="CenterContainer/ViewportContainer" to="." method="_on_ViewportContainer_gui_input"]
